# Plasmageddon

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.svelte  app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: chat.rs  compiler.rs  glm5.rs  groq.rs  mod.rs  part_match.rs  simulator.rs
src-tauri/src/bio/: codon.rs  gc_content.rs  mod.rs  ode_simulator.rs  orf.rs  restriction.rs  tm.rs
src-tauri/src/biosecurity/: mod.rs
src-tauri/src/commands/: ai_cmds.rs  construct_cmds.rs  io_cmds.rs  mod.rs  notebook_cmds.rs  ode_cmds.rs  parts_cmds.rs  sequence_cmds.rs  settings_cmds.rs
src-tauri/src/db/: chat.rs  constructs.rs  mod.rs  notebooks.rs  parts.rs  repos.rs  schema.sql  simulator.rs
src-tauri/src/parsers/: fasta.rs  genbank.rs  mod.rs  snapgene.rs
src/lib/api/: tauri.ts
src/lib/components/ai/: ChatPanel.svelte  CompilerWizard.svelte  SimulatorGraph.svelte  SimulatorPanel.svelte
src/lib/components/common/: Button.svelte  Modal.svelte  Toast.svelte
src/lib/components/editor/: CircularMap.svelte  EditorShell.svelte  SchematicView.svelte  SequenceView.svelte  ViewSync.ts
src/lib/components/layout/: CommandPalette.svelte  Header.svelte  Sidebar.svelte
src/lib/stores/: chat.svelte.ts  construct.svelte.ts  parts.svelte.ts  ui.svelte.ts
src/routes/: HomePage.svelte
src/routes/editor/: EditorPage.svelte
src/routes/notebook/: NotebookPage.svelte
src/routes/repos/: ReposPage.svelte
src/routes/settings/: SettingsPage.svelte
(+8 files in other folders)
